[package]
name = "bsv-mpc-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BRC-100 compatible MPC signing proxy — drop-in replacement for bsv-wallet-cli"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
bsv-mpc-relay = { path = "../bsv-mpc-relay" }
# §06.17.1 (#30, CONTAINER target): the proxy = coordinator reuses the
# relay-proven `PresignHandler` (cosigner-collect + PresigBundle assembly) +
# `FileBundleStore` from the native service crate, rather than reimplementing the
# coordinator SM. The service is a native (axum/tokio) crate — same target as the
# proxy — so this is a normal dependency.
bsv-mpc-service = { path = "../bsv-mpc-service" }
bsv.workspace = true
axum.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true
# §18.2 reshare-over-relay orchestrator (#35c pt2): the proxy plays the new-set
# parties in-process — it needs the cggmp24 KeyShare type + generic-ec scalars to
# build the NEW eval points and extract the proxy's OLD secret/eval from its share.
cggmp24.workspace = true
generic-ec = { workspace = true }
# #44: zeroize the proxy's in-memory secret share scalar + KeyShare bytes before
# they are overwritten on a reshare/refresh rotation (and on drop).
zeroize.workspace = true

[dev-dependencies]
# §06.17.1 CONTAINER-target hermetic gate (#30): generate real 2-of-2 key shares
# locally via the round_based simulator (keygen + auxinfo) before driving the
# presign-over-relay against an in-process bsv-mpc-service.
round-based = { workspace = true, features = ["sim", "state-machine"] }
pin-project = { workspace = true }
tempfile = { workspace = true }
# #22a consume-guard test builds PresigBundles (cosigner_encrypted_shares is
# Vec<serde_bytes::ByteBuf>).
serde_bytes = { workspace = true }
