[package]
name = "bsv-mpc-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Presigned-1-round relay-sign combiner over MessageBox — shared by bsv-mpc-proxy + bsv-mpc-client (issue #63)."

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
# §06.17.1 presign-over-relay coordinator reuses the service's PresignHandler +
# FileBundleStore + MessageBoxListener (no cycle: service depends on neither
# relay nor proxy). Both crates are native-only.
bsv-mpc-service = { path = "../bsv-mpc-service" }
bsv.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true
tokio = { workspace = true }
# #8: concurrent round-message sends (join_all) — the device's round-1 ship is the
# sequential-HTTP keygen-phase bottleneck (each /sendMessage is a ~1-2s CF+D1 write).
futures.workspace = true
# §18.2 reshare-over-relay coordinator (#66): extract the old secret scalar + VSS
# eval points from a serialized cggmp24 KeyShare + drive the throwaway DKG primes.
cggmp24 = { workspace = true }
generic-ec = { workspace = true }
rand = { workspace = true }
