[package]
name = "bsv-mpc-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone MPC Key Share Service binary (self-hosted alternative to CF Worker)"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
getrandom = "0.2"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
