[package]
name = "bsv-mpc-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone MPC Key Share Service binary (self-hosted alternative to CF Worker)"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
bsv.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
getrandom = "0.2"
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true

# DKG handler needs PregeneratedPrimes + SecurityLevel128 types from the
# pinned cggmp24 fork. Same source as bsv-mpc-core; default features
# already locked in the workspace patch table at the root Cargo.toml.
cggmp24.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
