[package]
name = "bsv-mpc-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone MPC Key Share Service binary (self-hosted alternative to CF Worker)"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
# `auth` (additive over workspace transaction+wallet) — the canonical BRC-31
# server verifier (`verify_message_signature` / `sign_message`) signs/verifies
# via `bsv::auth::AuthMessage` + `ProtoWallet`.
bsv = { package = "bsv-rs", version = "0.3.11", features = ["transaction", "wallet", "auth"] }
# Canonical BRC-31 server: `verify_message_signature`, `sign_message`,
# `SessionStorage`, transport (`build_request_payload` / `filter_signable_headers`).
# Same pinned rev as bsv-mpc-core.
bsv-middleware-rs = { git = "https://github.com/Calhooon/bsv-middleware-rs", rev = "61e1f4948d150dfb217ea5fdd22ad73c2b267bc7" }
async-trait = "0.1"
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
getrandom = "0.2"
base64.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true

# DKG handler needs PregeneratedPrimes + SecurityLevel128 types from the
# pinned cggmp24 fork. Same source as bsv-mpc-core; default features
# already locked in the workspace patch table at the root Cargo.toml.
cggmp24.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
