[package]
name = "bsv-mpc-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Worker Key Share Service for MPC threshold signing (WASM)"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
chrono.workspace = true
hex.workspace = true
worker = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
