# Standalone (nested [workspace] detaches it from the parent bsv-mpc workspace
# so the heavy Docker build only compiles this tiny crate).
[workspace]

[package]
name = "poc-cf-container"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1"

[[bin]]
name = "poc-cf-container"
path = "src/main.rs"
