[package]
name = "poc15-capstone"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# MPC threshold ECDSA
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = [
    "curve-secp256k1",
    "backend-num-bigint",
    "spof",
] }
cggmp24-keygen = { git = "https://github.com/LFDT-Lockness/cggmp21" }

# BSV SDK — wallet key derivation + encryption + transaction
bsv = { package = "bsv-sdk", path = "../../../rust-sdk", features = ["transaction", "wallet"] }

# HTTP server + client
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# MPC simulation (for DKG) + state machine (for HTTP transport)
round-based = { version = "0.4.1", features = ["sim", "state-machine"] }
generic-ec = { version = "0.4.1", features = ["curve-secp256k1", "serde"] }

# Direct secp256k1 point arithmetic (for partial ECDH / point addition)
k256 = { version = "0.13", features = ["arithmetic"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex + async utilities
hex = "0.4"
futures = "0.3"
pin-project = "1"

# Pin to avoid rand_core version conflict
glass_pumpkin = "=1.9.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optimize ALL dependencies in dev mode (crypto is too slow without it)
[profile.dev.package."*"]
opt-level = 2
