[package]
name = "poc17-cf-outbound-ws"
version = "0.1.0"
edition = "2021"
publish = false
description = "Phase H POC: pure-Rust Engine.IO + Socket.IO client + BRC-103 transport over CF Worker DO outbound WS"

# Joins parent workspace (like poc16-sm-inline) to inherit Cargo.lock
# + the cggmp24 [patch] redirect to Calhooon's fork. Phase H doesn't use
# cggmp24, but inheriting keeps the build reproducible across fresh clones.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CF Worker SDK (matches `crates/bsv-mpc-worker/Cargo.toml:18` worker = "0.7"
# for downstream-Phase-I consistency).
worker = "0.7"

# bsv-rs with auth + wallet + transaction + wasm features. Declared
# directly (not workspace-inherited) so the `auth` + `wasm` features stay
# scoped to this POC — other workspace members (e.g. `bsv-mpc-core`) don't
# need them and resolver-2 keeps the feature set local to this build target.
# Per audit §11.2 revised: SocketIoTransport wraps `bsv_rs::auth::Peer`.
bsv = { package = "bsv-rs", version = "0.3.9", default-features = false, features = ["auth", "wallet", "transaction", "wasm"] }

# Serialization (runtime-agnostic; inherits workspace versions)
serde = { workspace = true }
serde_json = { workspace = true }

# WASM entropy — CRITICAL for `wasm32-unknown-unknown` link. Without `js`,
# linking the test/cdylib fails with "the wasm*-unknown-unknown targets are
# not supported by default".
getrandom = { version = "0.2", features = ["js"] }

# wasm32 WS substrate per audit §11.2 revised Plan A1.
# Used by `transport_wasm.rs` to drive Engine.IO upgrade phase.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Event",
    "BinaryType",
]

[dependencies.async-trait]
version = "0.1"

[dependencies.futures]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.hex]
workspace = true

# Used by `/brc103-handshake` to generate the initial_nonce
# (32 random bytes, base64). wasm32 entropy comes from `getrandom/js`
# already declared above.
[dependencies.rand]
workspace = true
