[package]
name = "poc3-key-derivation"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# MPC — trusted_dealer requires `spof` feature
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = [
    "curve-secp256k1",
    "backend-num-bigint",
    "spof",
] }
cggmp24-keygen = { git = "https://github.com/LFDT-Lockness/cggmp21" }

# BSV SDK — wallet key derivation
bsv = { package = "bsv-rs", version = "0.3.0", features = ["transaction", "wallet"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# EC curve types
generic-ec = { version = "0.4.1", features = ["curve-secp256k1"] }

# Hex
hex = "0.4"

# Direct secp256k1 point arithmetic (for manual point addition in tests)
k256 = { version = "0.13", features = ["arithmetic"] }

# Pin to avoid rand_core version conflict
glass_pumpkin = "=1.9.0"

[patch.crates-io]
bsv-rs = { path = "../../../bsv-rs" }

# Optimize big integer in dev mode
[profile.dev.package]
num-bigint.opt-level = 3
num-traits.opt-level = 3
num-integer.opt-level = 3
glass_pumpkin.opt-level = 3
