[package]
name = "poc5-http-latency"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# MPC threshold ECDSA
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "backend-num-bigint"] }
cggmp24-keygen = { git = "https://github.com/LFDT-Lockness/cggmp21" }

# BSV SDK for signature verification
bsv = { package = "bsv-sdk", path = "../../../rust-sdk", features = ["transaction"] }

# HTTP server + client
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Crypto
sha2 = "0.10"
rand = "0.8"

# MPC simulation (for DKG) + state machine (for HTTP transport)
round-based = { version = "0.4.1", features = ["sim", "state-machine"] }
generic-ec = { version = "0.4.1", features = ["curve-secp256k1", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
pin-project = "1"

# Prime generation
glass_pumpkin = "=1.9.0"
hex = "0.4"

# Optimize ALL dependencies in dev mode (crypto is too slow without it)
[profile.dev.package."*"]
opt-level = 2
